# asam-osi-utilities

./: CMakeLists.txt  CMakeLists_hide.txt
cpp/examples/: CMakeLists.txt  README.md  convert_osi2mcap.cpp  mcap_cli_utils.h  optimize_mcap_compression.cpp
cpp/include/osi-utilities/tracefile/: TraceFileConfig.h
cpp/src/: CMakeLists.txt
cpp/tests/: CMakeLists.txt
python/examples/: README.md  optimize_mcap_compression.py
python/osi_utilities/tracefile/: __init__.py  _config.py
